# pytest-pytaf-help

./: README.md  pyproject.toml
pkg/: __init__.py  example.py
pkg2/: __init__.py  example.py
src/: main.py  pytaf_pdoc.py
tests/: main.py  test_docstring.py  test_pdoc.py
